--- a/checkbox.html
+++ b/checkbox.html
@@ -6,6 +6,7 @@
     <title>checkbox</title>
 </head>
 <body>
+    <p style="background-image: url('Table Practice/image/macbook_mouse.jpg');"></p>
     <p>multiple choice checkbox</p>
     <form action="">
 
