--- a/image/li-gradient.html
+++ b/image/li-gradient.html
@@ -4,22 +4,12 @@
 <head>
 <style>
 #grad1 {
-  width: 500px;
   height: 500px;
+  width: 500px;
   /* background-color: red; For browsers that do not support gradients */
-  background-image: linear-gradient(rgb(255, 143, 28),white,green );
+  background-image: repeating-linear-gradient(yellow,white 10%,green 20%);
 }
-div p{
-  padding: 30%;
-  padding-left: 16%;
-  color: rgb(236, 233, 12);
-  font-size: 3.5rem;
-  font-weight: bold;
-  font-style: italic;
-  text-align: center;
-  border-radius: 20%;
-  text-decoration:underline;
-}
+
 </style>
 </head>
 <body>
@@ -27,7 +17,6 @@ div p{
 <h1>Linear Gradient - Top to Bottom</h1>
 
 <div id="grad1">
-  <p>HINDUSTAN</p>
 </div>
 
 </body>
